--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "openclaw-mcp-integration",
   "version": "0.1.0",
   "description": "Model Context Protocol (MCP) integration for OpenClaw",
-  "main": "index.js",
+  "main": "src/index.js",
   "type": "module",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^0.5.0",
